--- a/src/layouts/components/CarouselGallery.astro
+++ b/src/layouts/components/CarouselGallery.astro
@@ -67,8 +67,8 @@ const selectedImages = getRandomImages(galleryImages, 20);
             <ImageMod
               src={`/images/gallery/${image}`}
               alt={`Producto regional ${index + 1}`}
-              width={300}
-              height={240}
+              width={350}
+              height={280}
               class="w-full h-full object-cover rounded-lg shadow-lg"
               format="webp"
               aboveTheFold={true}
@@ -84,10 +84,10 @@ const selectedImages = getRandomImages(galleryImages, 20);
             <ImageMod
               src={`/images/gallery/${image}`}
               alt={`Producto regional ${index + 21}`}
-              width={300}
-              height={240}
+              width={350}
+              height={280}
               class="w-full h-full object-cover rounded-lg shadow-lg"
-              format="jpeg"
+              format="webp"
               aboveTheFold={false}
               data-src={`/images/gallery/${image}`}
             />
@@ -101,10 +101,10 @@ const selectedImages = getRandomImages(galleryImages, 20);
             <ImageMod
               src={`/images/gallery/${image}`}
               alt={`Producto regional ${index + 41}`}
-              width={300}
-              height={240}
+              width={350}
+              height={280}
               class="w-full h-full object-cover rounded-lg shadow-lg"
-              format="png"
+              format="webp"
               aboveTheFold={true}
               data-src={`/images/gallery/${image}`}
             />
