:truck:RENAMED: Images

--- a/src/layouts/components/CarouselGallery.astro
+++ b/src/layouts/components/CarouselGallery.astro
@@ -4,42 +4,42 @@ import ImageMod from "@/layouts/components/ImageMod.astro";
 
 // Gallery image list
 const galleryImages = [
-  "MR[250902-020930][01-37].jpg",
-  "MR[250902-021025][02-37].jpg",
-  "MR[250902-021049][04-37].jpg",
-  "MR[250902-021139][05-37].jpg",
-  "MR[250902-021205][06-37].jpg",
-  "MR[250902-021219][07-37].jpg",
-  "MR[250902-021247][08-37].jpg",
-  "MR[250902-021317][09-37].jpg",
-  "MR[250902-021346][10-37].jpg",
-  "MR[250902-021437][11-37].jpg",
-  "MR[250902-021445][12-37].jpg",
-  "MR[250902-021843][13-37].jpg",
-  "MR[250902-021938][14-37].jpg",
-  "MR[250902-021958][15-37].jpg",
-  "MR[250902-022015][16-37].jpg",
-  "MR[250902-022230][17-37].jpg",
-  "MR[250902-022333][18-37].jpg",
-  "MR[250902-022400][19-37].jpg",
-  "MR[250902-022726][20-37].jpg",
-  "MR[250902-022830][21-37].jpg",
-  "MR[250902-023013][22-37].jpg",
-  "MR[250902-023115][23-37].jpg",
-  "MR[250902-023216][24-37].jpg",
-  "MR[250902-023338][25-37].jpg",
-  "MR[250902-023549][26-37].jpg",
-  "MR[250902-023745][27-37].jpg",
-  "MR[250902-024210][28-37].jpg",
-  "MR[250902-024322][29-37].jpg",
-  "MR[250902-024415][30-37].jpg",
-  "MR[250902-024516][31-37].jpg",
-  "MR[250902-024750][32-37].jpg",
-  "MR[250902-025218][33-37].jpg",
-  "MR[250902-025244][34-37].jpg",
-  "MR[250902-025829][35-37].jpg",
-  "MR[250902-025847][36-37].jpg",
-  "MR[250902-030011][37-37].jpg",
+  "variedad-de-nueces-semillas-y-botanas.jpg",
+  "salsa-unicas-en-nuestro-negocio.jpg",
+  "crema-de-cacahuate.jpg",
+  "miel-de-productores-regionales.jpg",
+  "miel-de-productores-regionales-2.jpg",
+  "salsas-casera.jpg",
+  "artesanias-carrito.jpg",
+  "artesanias-mujer-tarahumara.jpg",
+  "artesanias-muñequita-raramuri.jpg",
+  "miel-y-chips-de-manzana.jpg",
+  "mansanisima-jugo-de-manzana.jpg",
+  "felix-refresco-artesanal.jpg",
+  "variedad-de-mermeladas.jpg",
+  "carne-seca-en-tira.jpg",
+  "carne-seca-y-salsa-valentina.jpg",
+  "variedad-de-palomitas.jpg",
+  "jabones-artesanales.jpg",
+  "variedad-de-productos.jpg",
+  "variedad-de-productos-cimarron.jpg",
+  "variedad-de-artesanias-en-ceramica.jpg",
+  "variedad-de-productos-y-artesanias.jpg",
+  "miel-de-productores.jpg",
+  "variedad-de-salsas-diferentes-productores.jpg",
+  "carne-seca-1800.jpg",
+  "vitaminas-productores-locales.jpg",
+  "carbon-vegetal.jpg",
+  "caldo-de-hueso.jpg",
+  "cajeta-de-leche.jpg",
+  "sidra.jpg",
+  "artesania-gatito.jpg",
+  "variedad-de-cacahuates.jpg",
+  "remedios-naturales.jpg",
+  "souvenirs.jpg",
+  "souvenirs-2.jpg",
+  "souvenirs-3.jpg",
+  "souvenirs-4.jpg",
 ];
 
 // Function to select random images
