:zap:ADDED:More product images

--- a/src/layouts/components/CarouselGallery.astro
+++ b/src/layouts/components/CarouselGallery.astro
@@ -6,6 +6,7 @@ import ImageMod from "@/layouts/components/ImageMod.astro";
 const galleryImages = [
   "variedad-de-nueces-semillas-y-botanas.jpg",
   "salsa-unicas-en-nuestro-negocio.jpg",
+  "salsa-unicas-en-nuestro-negocio-2.jpg",
   "crema-de-cacahuate.jpg",
   "miel-de-productores-regionales.jpg",
   "miel-de-productores-regionales-2.jpg",
@@ -13,6 +14,7 @@ const galleryImages = [
   "artesanias-carrito.jpg",
   "artesanias-mujer-tarahumara.jpg",
   "artesanias-muñequita-raramuri.jpg",
+  "artesanias-regionales.jpg",
   "miel-y-chips-de-manzana.jpg",
   "mansanisima-jugo-de-manzana.jpg",
   "felix-refresco-artesanal.jpg",
@@ -40,6 +42,18 @@ const galleryImages = [
   "souvenirs-2.jpg",
   "souvenirs-3.jpg",
   "souvenirs-4.jpg",
+  "embutidos-menonitas.jpg",
+  "pan-menonita.jpg",
+  "jugos-de-manzana.jpg",
+  "jugos-de-manzana-2.jpg",
+  "variedad-de-quesos.jpg",
+  "variedad-de-quesos-2.jpg",
+  "variedad-de-quesos-3.jpg",
+  "variedad-de-quesos-4.jpg",
+  "variedad-de-quesos-5.jpg",
+  "variedad-de-quesos-6.jpg",
+  "variedad-de-quesos-7.jpg",
+  "variedad-de-quesos-8.jpg",
 ];
 
 // Function to select random images
